crates/apollo-compiler/test_data/diagnostics/0085_fragment_spread_target_defined.txt
Error: cannot find fragment `undefinedFragment` in this document
    ╭─[ 0085_fragment_spread_target_defined.graphql:10:5 ]
    │
 10 │     ...undefinedFragment
    │     ──────────┬─────────  
    │               ╰─────────── fragment `undefinedFragment` is not defined
────╯

